tests/errors/std-string-alloc-buffer-after-reset.ari
fn main() -> i64 {
  var zone = zone::create(16);
  let data = std::string::alloc_buffer(ref mut zone, 3);

  zone::reset(ref mut zone);
  let value = ptr_load(data);

  zone::destroy(zone);
  return value as i64;
}
